| Bug #53925 | valgrind failures in rpl.rpl_get_master_version_and_clock in mysql-trunk-merge | ||
|---|---|---|---|
| Submitted: | 23 May 2010 17:47 | Modified: | 6 Jul 2010 14:43 |
| Reporter: | Alexey Kopytov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | Tools: MTR / mysql-test-run | Severity: | S7 (Test Cases) |
| Version: | OS: | Any | |
| Assigned to: | Alexander Nozdrin | CPU Architecture: | Any |
[24 May 2010 15:09]
MySQL Verification Team
Thank you for the bug report. Verified on Ubuntu X86_64 10.04.
[24 May 2010 18:56]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/109089 3025 Alexander Nozdrin 2010-05-24 Fix for Bug#53925 (valgrind failures in rpl.rpl_get_master_version_and_clock in mysql-trunk-merge). There were two problems: - a mistake during merge of a patch for Bug 52629 from 5.1; - MTR treated auxilary output of newer valgrind as an error. The fixes are: - Fix merge error; - Teach MTR to skip 'HEAP summary' section of valgrind output.
[28 May 2010 5:49]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (version source revid:alik@sun.com-20100524190136-egaq7e8zgkwb9aqi) (pib:16)
[28 May 2010 6:18]
Bugs System
Pushed into 6.0.14-alpha (revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (version source revid:alik@sun.com-20100524190941-nuudpx60if25wsvx) (merge vers: 6.0.14-alpha) (pib:16)
[28 May 2010 6:46]
Bugs System
Pushed into 5.5.5-m3 (revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (version source revid:alik@sun.com-20100524185725-c8k5q7v60i5nix3t) (merge vers: 5.5.5-m3) (pib:16)
[5 Jul 2010 9:44]
Alexander Nozdrin
Pushed to trunk some time ago.
[6 Jul 2010 14:43]
Paul DuBois
Changes to test suite. No changelog entry needed.

Description: After a merge from mysql-5.1-bugteam, rpl.rpl_get_master_version_and_clock started to fail under valgrind in mysql-trunk-merge. When I run the entire rpl test suite, it fails as in PB2: rpl.rpl_get_master_version_and_clock [ fail ] Found warnings/errors in server log file! Test ended at 2010-05-13 08:38:51 line ==4083== LEAK SUMMARY: ==4083== definitely lost: 86 bytes in 2 blocks. ==4083== possibly lost: 0 bytes in 0 blocks. ==4083== still reachable: 0 bytes in 0 blocks. ==4083== suppressed: 56 bytes in 1 blocks. ^ Found warnings in /export/home2/pb2/test/sb_0-1803129-1273715274.57/mysql-5.5.5-m3-linux-x86_64-test/mysql-test/var-n_mix/log/mysqld.1.err When I run just rpl.rpl_get_master_version_and_clock alone, it fails with a different error: rpl.rpl_get_master_version_and_clock 'mix' [ fail ] Found warnings/errors in server log file! Test ended at 2010-05-23 20:59:06 line ==27778== HEAP SUMMARY: ==27778== in use at exit: 0 bytes in 0 blocks ==27778== total heap usage: 6,090 allocs, 6,090 frees, 66,270,618 bytes allocated ==27778== All heap blocks were freed -- no leaks are possible ==27778== For counts of detected and suppressed errors, rerun with: -v ==27881== HEAP SUMMARY: ==27881== in use at exit: 0 bytes in 0 blocks ==27881== total heap usage: 3,313 allocs, 3,313 frees, 62,497,927 bytes allocated ==27881== All heap blocks were freed -- no leaks are possible ==27881== For counts of detected and suppressed errors, rerun with: -v ^ Found warnings in /data/src/bzr/mysql-trunk-merge/mysql-test/var/log/mysqld.1.err How to repeat: ./mtr --mem --valgrind rpl.rpl_get_master_version_and_clock